--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="inicio.css">
     <title>gym</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <div class="titulo"><img src="img/logo.jpeg" alt="" class="titulo"></div>
