posicionamiento de canvas

--- a/inicio.html
+++ b/inicio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="normalize.css/normalize.css">
     <link rel="stylesheet" href="inicio.css">
-    <title>gym</title>
+    <title>Fit Buider</title>
 </head>
 <body>
     <div class="titulo"><img src="img/logo.jpeg" alt="" class="titulo"></div>
